[package]
name = "mc_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2.4.4"
miniz_oxide = "0.7.2"
serde = "1.0.196"
three-d = "0.16.4"
three-d-asset = {version = "0.6", features = ["png", "jpeg"] }


[dependencies.async-std]
version = "1.6"
features = ["attributes"]